# mod-manifest

./: .env.default  Cargo.toml  Dockerfile  fly.toml
src/: main.rs
src/http/: client.rs
src/loaders/: forge.rs  mod.rs  neoforge.rs
src/providers/: curseforge.rs  modrinth.rs
src/types/: manifest.rs  mod.rs
src/types/curseforge/: enums.rs  files.rs  info.rs  mod.rs
src/types/params/: loader.rs  provider.rs
